## $Id: Makefile.am,v 1.6 2003/10/20 15:03:04 chrisgreen Exp $
AUTOMAKE_OPTIONS=foreign no-dependencies

EXTRA_DIST = attack-responses.rules backdoor.rules bad-traffic.rules \
chat.rules ddos.rules deleted.rules dns.rules dos.rules experimental.rules \
exploit.rules finger.rules ftp.rules icmp-info.rules icmp.rules imap.rules \
info.rules local.rules misc.rules multimedia.rules mysql.rules netbios.rules \
nntp.rules oracle.rules other-ids.rules p2p.rules policy.rules pop3.rules \
porn.rules rpc.rules rservices.rules scan.rules shellcode.rules smtp.rules \
snmp.rules sql.rules telnet.rules tftp.rules virus.rules web-attacks.rules \
web-cgi.rules web-client.rules web-coldfusion.rules web-frontpage.rules \
web-iis.rules web-misc.rules web-php.rules x11.rules pop2.rules
