# $Id$
AUTOMAKE_OPTIONS=foreign no-dependencies
# find . -type f | grep -ve 'CVS\|Makefile\.\(in\|am\)'
EXTRA_DIST= \
./WIN32-Code/getopt.c \
./WIN32-Code/getopt_long.c \
./WIN32-Code/inet_aton.c \
./WIN32-Code/inet_pton.c \
./WIN32-Code/misc.c \
./WIN32-Code/name.aps \
./WIN32-Code/name.h \
./WIN32-Code/name.mc \
./WIN32-Code/name.rc \
./WIN32-Code/strtok_r.c \
./WIN32-Code/syslog.c \
./WIN32-Code/win32_service.c \
./WIN32-Includes/config.h \
./WIN32-Includes/getopt.h \
./WIN32-Includes/getopt1.h \
./WIN32-Includes/gnuc.h \
./WIN32-Includes/inttypes.h \
./WIN32-Includes/libnet/Devioctl.h \
./WIN32-Includes/libnet/IPExport.h \
./WIN32-Includes/libnet/IPHlpApi.h \
./WIN32-Includes/libnet/IPTypes.h \
./WIN32-Includes/libnet/LibnetNT.h \
./WIN32-Includes/libnet/NTDDNDIS.H \
./WIN32-Includes/libnet/Ntddpack.h \
./WIN32-Includes/libnet/PACKET32.H \
./WIN32-Includes/libnet/gnuc.h \
./WIN32-Includes/libnet/ifaddrlist.h \
./WIN32-Includes/libnet/libnet-asn1.h \
./WIN32-Includes/libnet/libnet-functions.h \
./WIN32-Includes/libnet/libnet-headers.h \
./WIN32-Includes/libnet/libnet-macros.h \
./WIN32-Includes/libnet/libnet-ospf.h \
./WIN32-Includes/libnet/libnet-structures.h \
./WIN32-Includes/libnet/libnet.h \
./WIN32-Includes/libnet/packet_types.h \
./WIN32-Includes/mysql/config-netware.h \
./WIN32-Includes/mysql/config-os2.h \
./WIN32-Includes/mysql/config-win.h \
./WIN32-Includes/mysql/errmsg.h \
./WIN32-Includes/mysql/libmysqld.def \
./WIN32-Includes/mysql/libmysql.def \
./WIN32-Includes/mysql/m_ctype.h \
./WIN32-Includes/mysql/m_string.h \
./WIN32-Includes/mysql/my_alloc.h \
./WIN32-Includes/mysql/my_dbug.h \
./WIN32-Includes/mysql/my_getopt.h \
./WIN32-Includes/mysql/my_global.h \
./WIN32-Includes/mysql/my_list.h \
./WIN32-Includes/mysql/my_pthread.h \
./WIN32-Includes/mysql/mysql_com.h \
./WIN32-Includes/mysql/mysqld_error.h \
./WIN32-Includes/mysql/mysql_embed.h \
./WIN32-Includes/mysql/mysql.h \
./WIN32-Includes/mysql/mysql_time.h \
./WIN32-Includes/mysql/mysql_version.h \
./WIN32-Includes/mysql/my_sys.h \
./WIN32-Includes/mysql/raid.h \
./WIN32-Includes/mysql/typelib.h \
./WIN32-Includes/NET/Bpf.h \
./WIN32-Includes/NETINET/IF_ETHER.H \
./WIN32-Includes/NETINET/IN_SYSTM.H \
./WIN32-Includes/NETINET/IP.H \
./WIN32-Includes/NETINET/IP_ICMP.H \
./WIN32-Includes/NETINET/IP_VAR.H \
./WIN32-Includes/NETINET/TCP.H \
./WIN32-Includes/NETINET/TCPIP.H \
./WIN32-Includes/NETINET/TCP_VAR.H \
./WIN32-Includes/NETINET/UDP.H \
./WIN32-Includes/NETINET/UDP_VAR.H \
./WIN32-Includes/pcre.h \
./WIN32-Includes/pcreposix.h \
./WIN32-Includes/rpc/auth.h \
./WIN32-Includes/rpc/auth_unix.h \
./WIN32-Includes/rpc/clnt.h \
./WIN32-Includes/rpc/pmap_clnt.h \
./WIN32-Includes/rpc/pmap_prot.h \
./WIN32-Includes/rpc/pmap_rmt.h \
./WIN32-Includes/rpc/rpc_des.h \
./WIN32-Includes/rpc/rpc.h \
./WIN32-Includes/rpc/rpc_msg.h \
./WIN32-Includes/rpc/svc_auth.h \
./WIN32-Includes/rpc/svc.h \
./WIN32-Includes/rpc/types.h \
./WIN32-Includes/rpc/xdr.h \
./WIN32-Includes/stdint.h \
./WIN32-Includes/syslog.h \
./WIN32-Includes/unistd.h \
./WIN32-Includes/WinPCAP/bittypes.h \
./WIN32-Includes/WinPCAP/bucket_lookup.h \
./WIN32-Includes/WinPCAP/count_packets.h \
./WIN32-Includes/WinPCAP/Devioctl.h \
./WIN32-Includes/WinPCAP/Gnuc.h \
./WIN32-Includes/WinPCAP/ip6_misc.h \
./WIN32-Includes/WinPCAP/memory_t.h \
./WIN32-Includes/WinPCAP/normal_lookup.h \
./WIN32-Includes/WinPCAP/Ntddndis.h \
./WIN32-Includes/WinPCAP/Ntddpack.h \
./WIN32-Includes/WinPCAP/Packet32.h \
./WIN32-Includes/WinPCAP/pcap-bpf.h \
./WIN32-Includes/WinPCAP/pcap.h \
./WIN32-Includes/WinPCAP/pcap-int.h \
./WIN32-Includes/WinPCAP/pcap-stdinc.h \
./WIN32-Includes/WinPCAP/pthread.h \
./WIN32-Includes/WinPCAP/remote-ext.h \
./WIN32-Includes/WinPCAP/sched.h \
./WIN32-Includes/WinPCAP/semaphore.h \
./WIN32-Includes/WinPCAP/tcp_session.h \
./WIN32-Includes/WinPCAP/time_calls.h \
./WIN32-Includes/WinPCAP/tme.h \
./WIN32-Includes/WinPCAP/Win32-Extensions.h \
./WIN32-Libraries/libnet/.cvswrappers \
./WIN32-Libraries/libnet/LibnetNT.lib \
./WIN32-Libraries/.cvswrappers \
./WIN32-Libraries/libpcap.lib \
./WIN32-Libraries/mysql/.cvswrappers \
./WIN32-Libraries/mysql/mysqlclient.lib \
./WIN32-Libraries/Packet.lib \
./WIN32-Libraries/pcre.lib \
./WIN32-Libraries/wpcap.lib \
./WIN32-Prj/build_releases.bat \
./WIN32-Prj/LibnetNT.dll \
./WIN32-Prj/pcre.dll \
./WIN32-Prj/snort_installer.nsi \
./WIN32-Prj/snort_installer_options.ini \
./WIN32-Prj/snort.dep \
./WIN32-Prj/snort.dsp \
./WIN32-Prj/snort_initialize.dsp \
./WIN32-Prj/build_all.dsp \
./WIN32-Prj/sf_engine.dsp \
./WIN32-Prj/sf_engine_initialize.dsp \
./WIN32-Prj/snort.dsw

noinst_LIBRARIES =
