AUTOMAKE_OPTIONS=foreign no-dependencies

EXTRA_DIST = \
hi_ad.h \
hi_client.h \
hi_client_norm.h \
hi_eo_events.h \
hi_eo.h \
hi_eo_log.h \
hi_include.h \
hi_mi.h \
hi_norm.h \
hi_return_codes.h \
hi_server.h \
hi_si.h \
hi_ui_config.h \
hi_ui_iis_unicode_map.h \
hi_ui_server_lookup.h \
hi_util.h \
hi_util_hbm.h \
hi_util_kmap.h \
hi_util_xmalloc.h
